load("@build_bazel_rules_apple//apple:apple.bzl", "apple_static_framework_import", "apple_dynamic_framework_import")
load("@build_bazel_rules_apple//apple:apple.bzl", "apple_static_xcframework_import", "apple_dynamic_xcframework_import")
load("@build_bazel_rules_apple//apple:dtrace.bzl", "dtrace_compile")
load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application", "ios_extension")
load("@build_bazel_rules_apple//apple:resources.bzl", "apple_resource_bundle", "apple_resource_group", "apple_bundle_import")
load("@build_bazel_rules_apple//apple:versioning.bzl", "apple_bundle_version")
load("xcodeproj2bazel_rules/cc_header.bzl", "cc_header")
load("xcodeproj2bazel_rules/cc_library.bzl", "cc_library")
load("xcodeproj2bazel_rules/hmap.bzl", "header_map")
load("xcodeproj2bazel_rules/ios_framework.bzl", "ios_framework")
load("xcodeproj2bazel_rules/metal_library.bzl", "metal_library")
load("xcodeproj2bazel_rules/module_map.bzl", "module_map")
load("xcodeproj2bazel_rules/objc_library.bzl", "objc_library")
load("xcodeproj2bazel_rules/static_library.bzl", "static_library")
load("xcodeproj2bazel_rules/swift_library.bzl", "swift_library")
load("xcodeproj2bazel_rules/system_library.bzl", "system_library")
package(default_visibility = ["//visibility:public"])
apple_bundle_version(
    name = "Kingfisher_Demo_app_version",
    build_version = "1244",
)
apple_bundle_version(
    name = "Kingfisher_framework_version",
    build_version = "2513",
)
header_map(
    name = "Kingfisher_Demo_swift_header_map",
    direct_hdr_providers = [":swift_module_Kingfisher_Demo"],
    namespace = "Kingfisher_Demo",
)
header_map(
    name = "Kingfisher_swift_header_map",
    direct_hdr_providers = [":swift_module_Kingfisher"],
    namespace = "Kingfisher",
)
ios_application(
    name = "Kingfisher_Demo_app",
    app_icons = glob([
        "Kingfisher/Demo/Demo/Kingfisher-Demo/Images.xcassets/AppIcon.appiconset/**",
    ]),
    bundle_id = "com.onevcat.Kingfisher-Demo",
    bundle_name = "Kingfisher-Demo",
    deps = [
        ":swift_module_Kingfisher_Demo",
    ],
    families = ["iphone", "ipad"],
    frameworks = [
        ":Kingfisher_framework",
    ],
    infoplists = [
        "Kingfisher/Demo/Demo/Kingfisher-Demo/Info.plist",
    ],
    minimum_os_version = "12.0",
    resources = [
        "Kingfisher/Demo/Demo/Kingfisher-Demo/Base.lproj/Main.storyboard",
        "Kingfisher/Demo/Demo/Kingfisher-Demo/LaunchScreen.storyboard",
        "Kingfisher/Demo/Demo/Kingfisher-Demo/Resources/loader.gif",
    ] + glob([
        "Kingfisher/Demo/Demo/Kingfisher-Demo/Images.xcassets/**",
    ], exclude=[
        "Kingfisher/Demo/Demo/Kingfisher-Demo/Images.xcassets/*.appiconset/**",
    ]),
    version = ":Kingfisher_Demo_app_version",
)
ios_framework(
    name = "Kingfisher_framework",
    bundle_id = "com.onevcat.Kingfisher",
    bundle_name = "Kingfisher",
    deps = [
        ":swift_module_Kingfisher",
    ],
    extension_safe = True,
    families = ["iphone", "ipad", "tv", "watch"],
    infoplists = [
        "Kingfisher/Sources/Info.plist",
    ],
    minimum_os_version = "12.0",
    version = ":Kingfisher_framework_version",
)
module_map(
    name = "Kingfisher_Demo_mixed_module_map",
    deps = [
        ":swift_module_Kingfisher_Demo",
    ],
    module_name = "Kingfisher_Demo",
)
module_map(
    name = "Kingfisher_mixed_module_map",
    deps = [
        ":swift_module_Kingfisher",
    ],
    module_name = "Kingfisher",
)
swift_library(
    name = "swift_module_Kingfisher",
    alwayslink = True,
    copts = [
        "-Xfrontend",
        "-warn-long-expression-type-checking=150",
    ],
    defines = [
        "DEBUG",
    ],
    linkopts = [
        "-dead_strip",
    ],
    module_name = "Kingfisher",
    objc_defines = [
        "DEBUG=1",
    ],
    srcs = [
        "Kingfisher/Sources/Cache/CacheSerializer.swift",
        "Kingfisher/Sources/Cache/DiskStorage.swift",
        "Kingfisher/Sources/Cache/FormatIndicatedCacheSerializer.swift",
        "Kingfisher/Sources/Cache/ImageCache.swift",
        "Kingfisher/Sources/Cache/MemoryStorage.swift",
        "Kingfisher/Sources/Cache/Storage.swift",
        "Kingfisher/Sources/Extensions/CPListItem+Kingfisher.swift",
        "Kingfisher/Sources/Extensions/ImageView+Kingfisher.swift",
        "Kingfisher/Sources/Extensions/NSButton+Kingfisher.swift",
        "Kingfisher/Sources/Extensions/NSTextAttachment+Kingfisher.swift",
        "Kingfisher/Sources/Extensions/TVMonogramView+Kingfisher.swift",
        "Kingfisher/Sources/Extensions/UIButton+Kingfisher.swift",
        "Kingfisher/Sources/Extensions/WKInterfaceImage+Kingfisher.swift",
        "Kingfisher/Sources/General/ImageSource/AVAssetImageDataProvider.swift",
        "Kingfisher/Sources/General/ImageSource/ImageDataProvider.swift",
        "Kingfisher/Sources/General/ImageSource/Resource.swift",
        "Kingfisher/Sources/General/ImageSource/Source.swift",
        "Kingfisher/Sources/General/KF.swift",
        "Kingfisher/Sources/General/KFOptionsSetter.swift",
        "Kingfisher/Sources/General/Kingfisher.swift",
        "Kingfisher/Sources/General/KingfisherError.swift",
        "Kingfisher/Sources/General/KingfisherManager.swift",
        "Kingfisher/Sources/General/KingfisherOptionsInfo.swift",
        "Kingfisher/Sources/Image/Filter.swift",
        "Kingfisher/Sources/Image/GIFAnimatedImage.swift",
        "Kingfisher/Sources/Image/GraphicsContext.swift",
        "Kingfisher/Sources/Image/Image.swift",
        "Kingfisher/Sources/Image/ImageDrawing.swift",
        "Kingfisher/Sources/Image/ImageFormat.swift",
        "Kingfisher/Sources/Image/ImageProcessor.swift",
        "Kingfisher/Sources/Image/ImageProgressive.swift",
        "Kingfisher/Sources/Image/ImageTransition.swift",
        "Kingfisher/Sources/Image/Placeholder.swift",
        "Kingfisher/Sources/Networking/AuthenticationChallengeResponsable.swift",
        "Kingfisher/Sources/Networking/ImageDataProcessor.swift",
        "Kingfisher/Sources/Networking/ImageDownloader.swift",
        "Kingfisher/Sources/Networking/ImageDownloaderDelegate.swift",
        "Kingfisher/Sources/Networking/ImageModifier.swift",
        "Kingfisher/Sources/Networking/ImagePrefetcher.swift",
        "Kingfisher/Sources/Networking/RedirectHandler.swift",
        "Kingfisher/Sources/Networking/RequestModifier.swift",
        "Kingfisher/Sources/Networking/RetryStrategy.swift",
        "Kingfisher/Sources/Networking/SessionDataTask.swift",
        "Kingfisher/Sources/Networking/SessionDelegate.swift",
        "Kingfisher/Sources/SwiftUI/ImageBinder.swift",
        "Kingfisher/Sources/SwiftUI/ImageContext.swift",
        "Kingfisher/Sources/SwiftUI/KFAnimatedImage.swift",
        "Kingfisher/Sources/SwiftUI/KFImage.swift",
        "Kingfisher/Sources/SwiftUI/KFImageOptions.swift",
        "Kingfisher/Sources/SwiftUI/KFImageProtocol.swift",
        "Kingfisher/Sources/SwiftUI/KFImageRenderer.swift",
        "Kingfisher/Sources/Utility/Box.swift",
        "Kingfisher/Sources/Utility/CallbackQueue.swift",
        "Kingfisher/Sources/Utility/Delegate.swift",
        "Kingfisher/Sources/Utility/ExtensionHelpers.swift",
        "Kingfisher/Sources/Utility/Result.swift",
        "Kingfisher/Sources/Utility/Runtime.swift",
        "Kingfisher/Sources/Utility/SizeExtensions.swift",
        "Kingfisher/Sources/Utility/String+MD5.swift",
        "Kingfisher/Sources/Views/AnimatedImageView.swift",
        "Kingfisher/Sources/Views/Indicator.swift",
    ],
)
swift_library(
    name = "swift_module_Kingfisher_Demo",
    deps = [
        ":swift_module_Kingfisher",
    ],
    linkopts = [
        "-dead_strip",
    ],
    module_name = "Kingfisher_Demo",
    objc_defines = [
        "DEBUG=1",
    ],
    objc_module_maps = [
        ":Kingfisher_mixed_module_map",
    ],
    srcs = [
        "Kingfisher/Demo/Demo/Kingfisher-Demo/AppDelegate.swift",
        "Kingfisher/Demo/Demo/Kingfisher-Demo/Extensions/UIViewController+KingfisherOperation.swift",
        "Kingfisher/Demo/Demo/Kingfisher-Demo/Resources/ImageLoader.swift",
        "Kingfisher/Demo/Demo/Kingfisher-Demo/SwiftUIViews/AnimatedImageDemo.swift",
        "Kingfisher/Demo/Demo/Kingfisher-Demo/SwiftUIViews/GeometryReaderDemo.swift",
        "Kingfisher/Demo/Demo/Kingfisher-Demo/SwiftUIViews/GridDemo.swift",
        "Kingfisher/Demo/Demo/Kingfisher-Demo/SwiftUIViews/LazyVStackDemo.swift",
        "Kingfisher/Demo/Demo/Kingfisher-Demo/SwiftUIViews/ListDemo.swift",
        "Kingfisher/Demo/Demo/Kingfisher-Demo/SwiftUIViews/MainView.swift",
        "Kingfisher/Demo/Demo/Kingfisher-Demo/SwiftUIViews/SingleViewDemo.swift",
        "Kingfisher/Demo/Demo/Kingfisher-Demo/SwiftUIViews/SizingAnimationDemo.swift",
        "Kingfisher/Demo/Demo/Kingfisher-Demo/SwiftUIViews/TransitionViewDemo.swift",
        "Kingfisher/Demo/Demo/Kingfisher-Demo/ViewControllers/AVAssetImageGeneratorViewController.swift",
        "Kingfisher/Demo/Demo/Kingfisher-Demo/ViewControllers/AutoSizingTableViewController.swift",
        "Kingfisher/Demo/Demo/Kingfisher-Demo/ViewControllers/DetailImageViewController.swift",
        "Kingfisher/Demo/Demo/Kingfisher-Demo/ViewControllers/GIFHeavyViewController.swift",
        "Kingfisher/Demo/Demo/Kingfisher-Demo/ViewControllers/GIFViewController.swift",
        "Kingfisher/Demo/Demo/Kingfisher-Demo/ViewControllers/HighResolutionCollectionViewController.swift",
        "Kingfisher/Demo/Demo/Kingfisher-Demo/ViewControllers/ImageCollectionViewCell.swift",
        "Kingfisher/Demo/Demo/Kingfisher-Demo/ViewControllers/ImageDataProviderCollectionViewController.swift",
        "Kingfisher/Demo/Demo/Kingfisher-Demo/ViewControllers/IndicatorCollectionViewController.swift",
        "Kingfisher/Demo/Demo/Kingfisher-Demo/ViewControllers/InfinityCollectionViewController.swift",
        "Kingfisher/Demo/Demo/Kingfisher-Demo/ViewControllers/MainViewController.swift",
        "Kingfisher/Demo/Demo/Kingfisher-Demo/ViewControllers/NormalLoadingViewController.swift",
        "Kingfisher/Demo/Demo/Kingfisher-Demo/ViewControllers/OrientationImagesViewController.swift",
        "Kingfisher/Demo/Demo/Kingfisher-Demo/ViewControllers/ProcessorCollectionViewController.swift",
        "Kingfisher/Demo/Demo/Kingfisher-Demo/ViewControllers/ProgressiveJPEGViewController.swift",
        "Kingfisher/Demo/Demo/Kingfisher-Demo/ViewControllers/SwiftUIViewController.swift",
        "Kingfisher/Demo/Demo/Kingfisher-Demo/ViewControllers/TextAttachmentViewController.swift",
        "Kingfisher/Demo/Demo/Kingfisher-Demo/ViewControllers/TransitionViewController.swift",
    ],
)
